--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ no-color = []
 
 [dependencies]
 atty = "0.2"
-lazy_static = "1"
+once_cell = "1.17"
 
 [target.'cfg(windows)'.dependencies.winapi]
 version = "0.3"
