--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "colored"
 description = "The most simple way to add colors in your terminal"
 version = "2.0.2"
 edition = "2021"
+rust-version = "1.63"
 authors = ["Thomas Wickham <mackwic@gmail.com>"]
 license = "MPL-2.0"
 homepage = "https://github.com/mackwic/colored"
