--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,14 +3,39 @@ on: pull_request
 env: { CLICOLOR_FORCE: 1 }
 
 jobs:
-  test:
+  cargo-fmt:
+    name: cargo-fmt@stable
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+      - name: Install Rust stable
+        uses: dtolnay/rust-toolchain@stable
       - name: Run formatting checks
         run: cargo fmt --check
+  cargo-clippy:
+    name: cargo-clippy@${{ matrix.version }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: [1.63, stable, beta]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Rust ${{ matrix.version }}
+        uses: dtolnay/rust-toolchain@${{ matrix.version }}
       - name: Run clippy checks
         run: cargo clippy --all-features -- -D warnings
+  cargo-test:
+    name: cargo-test@${{ matrix.version }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: [1.63, stable, beta]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Rust ${{ matrix.version }}
+        uses: dtolnay/rust-toolchain@${{ matrix.version }}
       - name: Run tests
         run: cargo test
