Change matrix order in GitHub Actions test workflow
Just makes the order of tests a bit more organized

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [1.63, stable, beta]
+        version: [stable, beta, 1.63]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
