--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [stable, beta, 1.63]
+        version: ["stable", "beta", "1.63"]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
