--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "colored"
 description = "The most simple way to add colors in your terminal"
-version = "1.9.2"
+version = "1.9.4"
 authors = ["Thomas Wickham <mackwic@gmail.com>"]
 license = "MPL-2.0"
 homepage = "https://github.com/mackwic/colored"
@@ -14,8 +14,8 @@ keywords = ["color", "string", "term", "ansi_term", "term-painter"]
 no-color = []
 
 [dependencies]
-atty = "0.2.11"
-lazy_static = "1.4.0"
+is-terminal = "0.4"
+lazy_static = "1"
 
 [target.'cfg(windows)'.dependencies.winapi]
 version = "0.3"
