--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ no-color = []
 
 [dependencies]
 lazy_static = "1"
+rgb = "0.8"
 
 [target.'cfg(windows)'.dependencies.windows-sys]
 version = "0.48"
