--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ no-color = []
 
 [dependencies]
 lazy_static = "1"
+once_cell = "1.20.2"
 
 [target.'cfg(windows)'.dependencies.windows-sys]
 version = ">=0.48,<=0.59"
