--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,28 @@ no-color = []
 
 [target.'cfg(windows)'.dependencies.windows-sys]
 version = ">=0.48,<=0.59"
-features = [
-    "Win32_Foundation",
-    "Win32_System_Console",
-]
+features = ["Win32_Foundation", "Win32_System_Console"]
 
 [dev-dependencies]
 ansi_term = "0.12"
 insta = "1"
 rspec = "1"
+
+[lints.rust]
+unsafe_code = "forbid"
+deprecated = "warn"
+
+[lints.clippy]
+complexity = "warn"
+correctness = "warn"
+nursery = "warn"
+pedantic = "warn"
+perf = "warn"
+style = "warn"
+suspicious = "warn"
+
+# Could be enabled in the future
+too_many_lines = { level = "allow", priority = 10 }
+
+# not necessary
+module_name_repetitions = { level = "allow", priority = 10 }
