--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ insta = "1"
 rspec = "1"
 
 [lints.rust]
-unsafe_code = "forbid"
+unsafe_code = "warn"
 deprecated = "warn"
 
 [lints.clippy]
@@ -40,6 +40,9 @@ suspicious = "warn"
 
 # Could be enabled in the future
 too_many_lines = { level = "allow", priority = 10 }
+unwrap_used = { level = "allow", priority = 10 }
+expect_used = { level = "allow", priority = 10 }
+wildcard_imports = { level = "allow", priority = 10 }
 
 # not necessary
 module_name_repetitions = { level = "allow", priority = 10 }
