Optimize Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,12 @@ rust-version = "1.80"
 # with this feature, no color will ever be written
 no-color = []
 
-
-[target.'cfg(windows)'.dependencies.windows-sys]
-version = ">=0.48,<=0.59"
-features = ["Win32_Foundation", "Win32_System_Console"]
-
-[target.'cfg(windows)'.dependencies.windows-version]
-version = "=0.1.2"
+[target.'cfg(windows)'.dependencies]
+windows-sys = { version = ">=0.48,<=0.59", features = [
+    "Win32_Foundation",
+    "Win32_System_Console",
+] }
+windows-version = "=0.1.2"
 
 [dev-dependencies]
 ansi_term = "0.12"
