--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MPL-2.0"
 homepage = "https://github.com/mackwic/colored"
 repository = "https://github.com/mackwic/colored"
 readme = "README.md"
-keywords = ["color", "string", "term", "ansi_term", "term-painter"]
+keywords = ["color", "string", "term", "ansiterm", "ansi_term", "term-painter"]
 rust-version = "1.80"
 
 [features]
@@ -21,7 +21,7 @@ version = ">=0.48,<=0.60"
 features = ["Win32_Foundation", "Win32_System_Console"]
 
 [dev-dependencies]
-ansi_term = "0.12"
+ansiterm = "0.12"
 insta = "1"
 rspec = "1"
 
